--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,11 @@ dependencies:
   logger: ^2.4.0
   shared_preferences: ^2.3.2
   dartz: ^0.10.1
+  intl: ^0.19.0
+  fluttertoast: ^8.2.8
+  top_snackbar_flutter: ^3.1.0
+
+
 
 dev_dependencies:
   flutter_test:
@@ -37,3 +42,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/images/
+    - assets/icons/
